chenged welcome sign color

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div class="container">
             <div class="intro-text">
                 <img src="./img/logos/finallogo.png" style="width:300px;height:200px;" class="logo">
-                <div class="intro-lead-in">Welcome To Our Site!</div>
+                <div class="intro-lead-in" style="color:#fed100">Welcome To Our Site!</div>
                 <div class="intro-heading">It's Nice To Meet You</div>
                  <!-- Begin MailChimp Signup Form -->
           <div id="mc_embed_signup">
@@ -151,18 +151,18 @@
             </div>
             <div class="row text-center">
                 <div class="col-md-4">
-                   <img src="img/services/mantoman.png" class="img-responsive img-centered" alt="">
+                   <a href="#"><img src="img/services/mantoman.png" class="img-responsive img-centered" alt=""></a>
                     <h4 class="service-heading">Fundraising Advise</h4>
                     <p class="text-muted">PeduL connects today’s youth with the support and resources they need to make their educational dreams a reality. We are a non-profit higher education crowdfunding platform dedicated to helping students alleviate their financial burden of college tuition.</p>
                 </div>
                 <div class="col-md-4">
-                   <img src="img/services/graduation.png" class="img-responsive img-centered" alt="">
+                   <a href="#"><img src="img/services/graduation.png" class="img-responsive img-centered" alt=""></a>
                     <h4 class="service-heading">Youth Empowerment</h4>
                     <p class="text-muted">Our goal is to provide visibility and opportunity to students who seek to pursue higher education nationwide. College costs continue to rise and student aid and grants are not rising at the same rate on a per student basis. We want higher education to be a realistic and feasible goal, not a fairytale luxury.
 </p>
                 </div>
                 <div class="col-md-4">
-                    <img src="img/services/money.png" class="img-responsive img-centered" alt="">
+                    <a href="#"><img src="img/services/money.png" class="img-responsive img-centered" alt=""></a>
                     <h4 class="service-heading">Secure Monetary Facilitation</h4>
                     <p class="text-muted">We seek to position ourselves as the only platform in the crowdfunding marketplace today that can be trusted. Funds are facilitated from individual campaigns directly to universities in the form of a third-party scholarship. What makes us stand out? Transparency.</p>
                 </div>
