--- a/index.html
+++ b/index.html
@@ -485,7 +485,83 @@
 						</ul>
 					</div>
 				</div>
-				<div class="row"></div>
+			</div>	
+
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12 text-center">
+						<h2 class="section-heading">Supporting Members</h2>
+						<h3 class="section-subheading text-muted">People at IDT helping build our app</h3>
+					</div>
+				</div>	
+				<div class="row">
+					<div class="col-sm-3">
+						<div class="team-member">
+							<p class="user johnny"></p>
+							<h4>Johnny Pacia</h4>
+							<p class="text-muted">IDT Developer</p>
+							<ul class="list-inline social-buttons">
+								<li><a href="https://twitter.com/JohnnyPacia"><i
+										class="fa fa-twitter"></i></a></li>
+								<li><a href="https://www.facebook.com/johnnypacia"><i
+										class="fa fa-facebook"></i></a></li>
+								<li><a
+									href="https://www.linkedin.com/in/johnnypacia"><i
+										class="fa fa-linkedin"></i></a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="col-sm-3">
+						<div class="team-member">
+							<p class="user kyle"></p>
+							<h4>Kyle Stengline</h4>
+							<p class="text-muted">IDT Developer</p>
+							<ul class="list-inline social-buttons">
+								<li><a href="https://twitter.com/kylestengline"><i
+										class="fa fa-twitter"></i></a></li>
+								<li><a href=": https://www.facebook.com/kyle.stengline"><i
+										class="fa fa-facebook"></i></a></li>
+								<li><a
+									href="https://www.linkedin.com/in/kylestengline"><i
+										class="fa fa-linkedin"></i></a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="col-sm-3">
+						<div class="team-member">
+							<p class="user josh"></p>
+							<h4>Josh Bloustein</h4>
+							<p class="text-muted">Market Research</p>
+							<ul class="list-inline social-buttons">
+								<li><a href="https://twitter.com/kylestengline"><i
+										class="fa fa-twitter"></i></a></li>
+								<li><a href=": https://www.facebook.com/kyle.stengline"><i
+										class="fa fa-facebook"></i></a></li>
+								<li><a
+									href="https://www.linkedin.com/in/kylestengline"><i
+										class="fa fa-linkedin"></i></a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="col-sm-3">
+						<div class="team-member">
+							<p class="user yifei"></p>
+							<h4>Yifei Ji</h4>
+							<p class="text-muted">Public Relations</p>
+							<ul class="list-inline social-buttons">
+								<li><a href="https://mobile.twitter.com/CheeFred"><i
+										class="fa fa-twitter"></i></a></li>
+								<li><a href="https://www.facebook.com/yifei.ji.7"><i
+										class="fa fa-facebook"></i></a></li>
+								<li><a
+									href="https://www.linkedin.com/in/yifei-ji-66353782"><i
+										class="fa fa-linkedin"></i></a></li>
+							</ul>
+						</div>
+					</div>
+				</div>						
+			</div>		
+		</div>
 	</section>
 
 	<!-- FAQ Section -->
