--- a/index.html
+++ b/index.html
@@ -533,12 +533,12 @@
 							<h4>Josh Bloustein</h4>
 							<p class="text-muted">Market Research</p>
 							<ul class="list-inline social-buttons">
-								<li><a href="https://twitter.com/kylestengline"><i
+								<li><a href="https://twitter.com/"><i
 										class="fa fa-twitter"></i></a></li>
-								<li><a href=": https://www.facebook.com/kyle.stengline"><i
+								<li><a href="https://www.facebook.com/joshua.blustein.9"><i
 										class="fa fa-facebook"></i></a></li>
 								<li><a
-									href="https://www.linkedin.com/in/kylestengline"><i
+									href="https://www.linkedin.com/in/joshua-blustein-87a744123?trk=nav_responsive_tab_profile"><i
 										class="fa fa-linkedin"></i></a></li>
 							</ul>
 						</div>
