--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 		<div class="response" id="mce-success-response" style="display:none"></div>
 	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_821754083a1ddd023c0dd0157_2e2866449c" tabindex="-1" value=""></div>
-    <div class="clear"><center><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-success btn-lg" style="margin-top: 5px;"></center></div>
+    <div class="clear"><center><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-success btn-lg" style="margin: 0px;"></center></div>
     </div>
 </form>
 </div>
