--- a/index.html
+++ b/index.html
@@ -116,12 +116,15 @@
 				<div class="intro-heading">
 					<h2>Where Opportunities Blossom</h2>
 				</div>
+
+<!-- Added styling for this form within /css/agency.css -->
 <!-- Begin MailChimp Signup Form -->
-<style type="text/css">
-	#mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif;  width:300px; margin: 0 auto;}
+<!--<style type="text/css">
+	#mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif;  width:300px; margin: 0 auto; padding-left: 10px;}
 	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
 	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-</style>
+</style> -->
+
 <div id="mc_embed_signup">
 <form action="//pedul.us12.list-manage.com/subscribe/post?u=821754083a1ddd023c0dd0157&amp;id=2e2866449c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
@@ -146,7 +149,7 @@
 		<div class="response" id="mce-success-response" style="display:none"></div>
 	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_821754083a1ddd023c0dd0157_2e2866449c" tabindex="-1" value=""></div>
-    <div class="clear"><center><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-success btn-lg" style="margin: 0px;"></center></div>
+    <div class="clear"><center><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-success btn-lg"></center></div>
     </div>
 </form>
 </div>
