--- a/index.html
+++ b/index.html
@@ -129,19 +129,22 @@
 <form action="//pedul.us12.list-manage.com/subscribe/post?u=821754083a1ddd023c0dd0157&amp;id=2e2866449c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
 <div class="mc-field-group">
-	<input type="text" value="" name="FNAME" class="required" id="mce-FNAME" placeholder="Full name *" style="color: #000000;">
+  <p id=asterisk>*</p> 
+  <input type="text" value="" name="FNAME" class="required" id="mce-FNAME" placeholder="Full name" style="color: #000000;">
 </div>
 <div class="mc-field-group">
-	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email *" style="color: #000000;">
+  <p id=asterisk>*</p>
+	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email" style="color: #000000;">
 </div>
 <div class="mc-field-group">
-	<input type="text" value="" name="MMERGE2" class="required" id="mce-MMERGE2" placeholder="Zip code *" style="color: #000000;">
+  <p id=asterisk>*</p>
+  <input type="text" value="" name="MMERGE2" class="required" id="mce-MMERGE2" placeholder="Zip code" style="color: #000000;">
 </div>
 <div class="mc-field-group input-group"><center>
     <strong>I am a </strong>
-    <ul><li><input type="checkbox" value="1" name="group[9993][1]" id="mce-group[9993]-9993-0"><label for="mce-group[9993]-9993-0">Potential student</label></li>
-<li><input type="checkbox" value="2" name="group[9993][2]" id="mce-group[9993]-9993-1"><label for="mce-group[9993]-9993-1">Potential donor</label></li>
-<li><input type="checkbox" value="4" name="group[9993][4]" id="mce-group[9993]-9993-2"><label for="mce-group[9993]-9993-2">Potential investor</label></li>
+    <ul><li><input type="checkbox" value="1" name="group[9993][1]" id="mce-group[9993]-9993-0"><label for="mce-group[9993]-9993-0" style="color: #000000;margin-right: 1.5%;">Potential student</label></li>
+<li><input type="checkbox" value="2" name="group[9993][2]" id="mce-group[9993]-9993-1"><label for="mce-group[9993]-9993-1" style="color: #000000;margin-right: 5%;">Potential donor</label></li>
+<li><input type="checkbox" value="4" name="group[9993][4]" id="mce-group[9993]-9993-2"><label for="mce-group[9993]-9993-2" style="color: #000000;margin-right: .5%;">Potential investor</label></li>
 </ul></center>
 </div>
 	<div id="mce-responses" class="clear">
