--- a/animate.html
+++ b/animate.html
@@ -5,6 +5,11 @@
   <title>Pedul</title>
 </head>
 <body>
-  <div id="edu"><img src="img/logos/EDU.png"></div>
+  <div id="container">
+    <div id="edu"><img class="edupng" src="img/logos/EDU.png"></div>
+    <div id="pandl"><img class="pandl" src="img/logos/PandL.png"></div>
+  </div>
+  <script type="text/javascript" src="js/jquery-3.1.0.js"></script>
+  <script type="text/javascript" src="js/animate_logo.js"></script>
 </body>
 </html>
