adds pedul logo fadein and fadeout to index

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <!-- Custom CSS -->
 <link href="css/agency.css" rel="stylesheet">
 <link rel="stylesheet" href="css/animate.css">
+<link rel="stylesheet" href="css/main.css">
 
 <!-- Custom Fonts -->
 <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet"
@@ -72,6 +73,14 @@
 
 <body id="page-top" class="index loading">
 
+  <!-- PeduL Logo Fadein and FadeOut-->
+
+  <div id="pedul_logo_container">
+    <div id="edu"><img class="edupng" src="img/logos/EDU.png"></div>
+    <div id="pandl"><img class="pandl" src="img/logos/PandL.png"></div>
+  </div> 
+
+
 	<!-- Navigation -->
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
@@ -107,6 +116,7 @@
 
 	<!-- Header -->
 	<header>
+
 	<div class="container" id="one">
 			<div class="intro-text">
 				<img src="./img/logos/finallogo.png"
@@ -912,6 +922,10 @@
 	
 	<!-- Hide top logo -->
 	<script src="js/logohide.js"></script>
+
+	<!-- Pedul logo Scripts -->
+  <script type="text/javascript" src="js/jquery-3.1.0.js"></script>                                                                                       
+  <script type="text/javascript" src="js/animate_logo.js"></script>
 
 </body>
 
