--- a/index.html
+++ b/index.html
@@ -1,24 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="PeduL subscription page">
 <meta name="author" content="Murtala Aliyu">
-
 <title>PeduL - Subscribe</title>
 
 <!-- Bootstrap Core CSS -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
-
 <!-- Custom CSS -->
 <link href="css/agency.css" rel="stylesheet">
 <link rel="stylesheet" href="css/animate.css">
 <link rel="stylesheet" href="css/main.css">
-
 <!-- Custom Fonts -->
 <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet"
 	type="text/css">
@@ -32,7 +27,6 @@
 <link
 	href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700'
 	rel='stylesheet' type='text/css'>
-
 <!--social media previews-->
 <!--facebook/google+/etc-->
 <meta property="og:url" content="https://www.pedul.io/" />
@@ -77,7 +71,7 @@
 
   <div id="pedul_logo_container">
     <div id="edu"><img class="edupng" src="img/logos/EDU.png"></div>
-    <div id="pandl"><img class="pandl" src="img/logos/PandL.png"></div>
+    <div id="pandl"><img class="pandl" src="img/logos/PandL.png"><h2 class="intro-heading">Where Opportunities Blossom</h2></div>
   </div> 
 
 
@@ -112,68 +106,74 @@
 			<!-- /.navbar-collapse -->
 		</div>
 		<!-- /.container-fluid -->
+		<div class="intro-heading"><h2>Where Opportunities Blossom</h2></div>
 	</nav>
 
 	<!-- Header -->
 	<header>
-
-	<div class="container" id="one">
+		<div class="container" id="one">
 			<div class="intro-text">
-				<img src="./img/logos/finallogo.png"
+				<!-- <img src="./img/logos/finallogo.png"
 					style="width: 300px; height: 200px; margin: 0 auto; margin-top: -50px;"
-					class="logo animated pulse">
+					class="logo animated pulse"> -->
 				<!--<div class="intro-lead-in" style="color:#fed100">Welcome To Our Site!</div>-->
-				<div class="intro-heading">
-					<h2>Where Opportunities Blossom</h2>
-				</div>
-
-<!-- Added styling for this form within /css/agency.css -->
-<!-- Begin MailChimp Signup Form -->
-<!--<style type="text/css">
-	#mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif;  width:300px; margin: 0 auto; padding-left: 10px;}
-	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-</style> -->
-
-<div id="mc_embed_signup">
-<form action="//pedul.us12.list-manage.com/subscribe/post?u=821754083a1ddd023c0dd0157&amp;id=2e2866449c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <div id="mc_embed_signup_scroll">
-<div class="mc-field-group">
-  <p id=asterisk>*</p> 
-  <input type="text" value="" name="FNAME" class="required" id="mce-FNAME" placeholder="Full name" style="color: #000000;">
-</div>
-<div class="mc-field-group">
-  <p id=asterisk>*</p>
-	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email" style="color: #000000;">
-</div>
-<div class="mc-field-group">
-  <p id=asterisk>*</p>
-  <input type="text" value="" name="MMERGE2" class="required" id="mce-MMERGE2" placeholder="Zip code" style="color: #000000;">
-</div>
-<div class="mc-field-group input-group"><center>
-    <strong>I am a </strong>
-    <ul><li><input type="checkbox" value="1" name="group[9993][1]" id="mce-group[9993]-9993-0"><label for="mce-group[9993]-9993-0" style="color: #000000;margin-right: 1.5%;">Potential student</label></li>
-<li><input type="checkbox" value="2" name="group[9993][2]" id="mce-group[9993]-9993-1"><label for="mce-group[9993]-9993-1" style="color: #000000;margin-right: 5%;">Potential donor</label></li>
-<li><input type="checkbox" value="4" name="group[9993][4]" id="mce-group[9993]-9993-2"><label for="mce-group[9993]-9993-2" style="color: #000000;margin-right: .5%;">Potential investor</label></li>
-</ul></center>
-</div>
-	<div id="mce-responses" class="clear">
-		<div class="response" id="mce-error-response" style="display:none"></div>
-		<div class="response" id="mce-success-response" style="display:none"></div>
-	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_821754083a1ddd023c0dd0157_2e2866449c" tabindex="-1" value=""></div>
-    <div class="clear"><center><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-success btn-lg"></center></div>
-    </div>
-</form>
-</div>
-<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[1]='FNAME';ftypes[1]='text';fnames[0]='EMAIL';ftypes[0]='email';fnames[2]='MMERGE2';ftypes[2]='zip';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-				<!-- End mc_embed_signup-->
-				<a href="#numbers" class="page-scroll"><img
-					src="img/logos/cursor.png"
-					class="img-responsive img-centered animated" alt=""
-					style="margin-top: 40px;"></a>
+				<!-- Added styling for this form within /css/agency.css -->
+				<!-- Begin MailChimp Signup Form -->
+				<!--<style type="text/css">
+					#mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif;  width:300px; margin: 0 auto; padding-left: 10px;}
+					/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+					   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+				</style> -->
+			<div id="mc_embed_signup">
+				<form action="//pedul.us12.list-manage.com/subscribe/post?u=821754083a1ddd023c0dd0157&amp;id=2e2866449c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+				    <div id="mc_embed_signup_scroll">
+						<div class="mc-field-group">
+						  <p id=asterisk>*</p> 
+						  <input type="text" value="" name="FNAME" class="required" id="mce-FNAME" placeholder="Full name" style="color: #000000;">
+						</div>
+						<div class="mc-field-group">
+						  <p id=asterisk>*</p>
+							<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email" style="color: #000000;">
+						</div>
+						<div class="mc-field-group">
+						  <p id=asterisk>*</p>
+						  	<input type="text" value="" name="MMERGE2" class="required" id="mce-MMERGE2" placeholder="Zip code" style="color: #000000;">
+						</div>
+						<div class="mc-field-group input-group">
+							<center>
+								<strong>I am a</strong>
+							    <ul>
+							    	<li><input type="checkbox" value="1" name="group[9993][1]" id="mce-group[9993]-9993-0"><label for="mce-group[9993]-9993-0" style="color: #000000;margin-right: 1.5%;">Potential student</label></li>
+									<li><input type="checkbox" value="2" name="group[9993][2]" id="mce-group[9993]-9993-1"><label for="mce-group[9993]-9993-1" style="color: #000000;margin-right: 5%;">Potential donor</label></li>
+									<li><input type="checkbox" value="4" name="group[9993][4]" id="mce-group[9993]-9993-2"><label for="mce-group[9993]-9993-2" style="color: #000000;margin-right: .5%;">Potential investor</label></li>
+								</ul>
+							</center>
+						</div>
+						<div id="mce-responses" class="clear">
+							<div class="response" id="mce-error-response" style="display:none"></div>
+							<div class="response" id="mce-success-response" style="display:none"></div>
+						</div>    
+						<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+					    <div style="position: absolute; left: -5000px;" aria-hidden="true">
+					    	<input type="text" name="b_821754083a1ddd023c0dd0157_2e2866449c" tabindex="-1" value="">
+					    </div>
+					    <div class="clear">
+					    	<center>
+					    		<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-success btn-lg">
+					    	</center>
+					    </div>
+					</div>
+				</form>
 			</div>
+			<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+			<script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[1]='FNAME';ftypes[1]='text';fnames[0]='EMAIL';ftypes[0]='email';fnames[2]='MMERGE2';ftypes[2]='zip';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+						<!-- End mc_embed_signup-->
+						<a href="#numbers" class="page-scroll"><img
+							src="img/logos/cursor.png"
+							class="img-responsive img-centered animated" alt=""
+							style="margin-top: 40px;"></a>
 		</div>
+	</div>
 	</header>
 
 	<!-- By the Numbers Section -->
