--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 <link
 	href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700'
 	rel='stylesheet' type='text/css'>
+<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet"> 
 <!--social media previews-->
 <!--facebook/google+/etc-->
 <meta property="og:url" content="https://www.pedul.io/" />
