--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
   <div id="pedul_logo_container">
     <div id="edu"><img class="edupng" src="img/logos/EDU.png"></div>
-    <div id="pandl"><img class="pandl" src="img/logos/PandL.png"><h2 class="intro-heading">Where Opportunities Blossom</h2></div>
+    <div id="pandl"><img class="pandl" src="img/logos/PandL.png"><h2 class="intro-heading">where opportunities blossom</h2></div>
   </div> 
 
 
@@ -107,7 +107,7 @@
 			<!-- /.navbar-collapse -->
 		</div>
 		<!-- /.container-fluid -->
-		<div class="intro-heading"><h2>Where Opportunities Blossom</h2></div>
+		<div class="intro-tagline"><span><h2>Where Opportunities Blossom</h2><span></div>
 	</nav>
 
 	<!-- Header -->
