adds styling to pedul logo in navbar and centers intro text

--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
 						class="icon-bar"></span>
 				</button>
 				<!-- <a class="navbar-brand page-scroll" href="#page-top">Sign up</a> -->
-				<a class="page-scroll log" href="#page-top"><img id="fade" src="./img/logos/logowhite.png"
-					style="width: 100px; height: 90px;"></a>
+				<a class="page-scroll log" href="#page-top"><img id="fade_pedul_logo" src="./img/logos/logowhite.png"></a>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
@@ -107,7 +106,7 @@
 			<!-- /.navbar-collapse -->
 		</div>
 		<!-- /.container-fluid -->
-		<div class="intro-tagline"><span><h2>Where Opportunities Blossom</h2><span></div>
+		<div class="intro-tagline"><span><h2 class="tagline">Where Opportunities Blossom</h2><span></div>
 	</nav>
 
 	<!-- Header -->
