--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
 
   <div id="pedul_logo_container">
     <div id="edu"><img class="edupng" src="img/logos/EDU.png"></div>
-    <div id="pandl"><img class="pandl" src="img/logos/PandL.png"><h2 class="intro-heading">where opportunities blossom</h2></div>
+    <div id="pandl"><img class="pandl" src="img/logos/PandL.png">
+      <h2 class="intro-heading">where opportunities blossom</h2>
+    </div>
   </div> 
 
 
@@ -106,13 +108,17 @@
 			<!-- /.navbar-collapse -->
 		</div>
 		<!-- /.container-fluid -->
-		<div class="intro-tagline"><span><h2 class="tagline">Where Opportunities Blossom</h2><span></div>
 	</nav>
 
 	<!-- Header -->
 	<header>
 		<div class="container" id="one">
 			<div class="intro-text">
+       <!-- <div class="intro-tagline">
+          <span>
+             <h2 class="tagline">Where Opportunities Blossom</h2>
+           <span>
+       </div> -->
 				<!-- <img src="./img/logos/finallogo.png"
 					style="width: 300px; height: 200px; margin: 0 auto; margin-top: -50px;"
 					class="logo animated pulse"> -->
