--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
 	href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700'
 	rel='stylesheet' type='text/css'>
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet"> 
-<!--social media previews-->
 <!--facebook/google+/etc-->
 <meta property="og:url" content="https://www.pedul.io/" />
 <meta property="og:title" content="PeduL: Where Opportunities Blossom." />
@@ -90,7 +89,7 @@
 						class="icon-bar"></span>
 				</button>
 				<!-- <a class="navbar-brand page-scroll" href="#page-top">Sign up</a> -->
-				<a class="page-scroll log" href="#page-top"><img id="fade_pedul_logo" src="./img/logos/logowhite.png"></a>
+				<a id="nav-logo" class="page-scroll log" href="#page-top"><img id="fade_pedul_logo" src="./img/logos/logowhite.png"></a>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
@@ -196,9 +195,9 @@
 			<div class="row" style="max-width: 100%; height: auto !important;">
 				<div class="col-lg-12 text-center">
 					<p class="text-muted" style="font-size: 20px;">
-						This is an <a href="http://www.finaid.org">estimate</a> of current
-						student loan debt outstanding in the U.S.
+						According to <a href="http://www.marketwatch.com/story/every-second-americans-get-buried-under-another-3055-in-student-loan-debt-2015-06-10">MarketWatch</a> student Loan debt is currently over $1.3 Trillion and it is growing $2,726 every second
 					</p>
+					<div class="ftb-widget" data-width="670" data-height="710" data-widget-id="fR0ZMXf8y3j"  data-href="https://www.graphiq.com/wlp/fR0ZMXf8y3j" ><a href="https://www.graphiq.com/wlp/fR0ZMXf8y3j" target="_blank"  style="font:14px/16px arial;color:#3d3d3d;">      | StartClass</a></div><script async src="https://s.graphiq.com/rx/widgets.js"></script>
 				</div>
 			</div>
 			<br> <br> <br> <img
