--- a/index.html
+++ b/index.html
@@ -125,25 +125,25 @@
 				<!--<div class="intro-lead-in" style="color:#fed100">Welcome To Our Site!</div>-->
 				<!-- Added styling for this form within /css/agency.css -->
 				<!-- Begin MailChimp Signup Form -->
-				<!--<style type="text/css">
+				<style type="text/css">
 					#mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif;  width:300px; margin: 0 auto; padding-left: 10px;}
 					/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
 					   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-				</style> -->
+				</style>
 			<div id="mc_embed_signup">
 				<form action="//pedul.us12.list-manage.com/subscribe/post?u=821754083a1ddd023c0dd0157&amp;id=2e2866449c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 				    <div id="mc_embed_signup_scroll">
 						<div class="mc-field-group">
 						  <p id=asterisk>*</p> 
-						  <input type="text" value="" name="FNAME" class="required" id="mce-FNAME" placeholder="Full name" style="color: #000000;">
+						  <input type="text" value="" name="FNAME" class="required" id="mce-FNAME" placeholder="Full name" style="color: #000000; width:300px;">
 						</div>
 						<div class="mc-field-group">
 						  <p id=asterisk>*</p>
-							<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email" style="color: #000000;">
+							<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email" style="color: #000000;width:300px;">
 						</div>
 						<div class="mc-field-group">
 						  <p id=asterisk>*</p>
-						  	<input type="text" value="" name="MMERGE2" class="required" id="mce-MMERGE2" placeholder="Zip code" style="color: #000000;">
+						  	<input type="text" value="" name="MMERGE2" class="required" id="mce-MMERGE2" placeholder="Zip code" style="color: #000000;width:300px;">
 						</div>
 						<div class="mc-field-group input-group">
 							<center>
