adds all images, investors section and adds styling to mailchimp

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 			<script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[1]='FNAME';ftypes[1]='text';fnames[0]='EMAIL';ftypes[0]='email';fnames[2]='MMERGE2';ftypes[2]='zip';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 						<!-- End mc_embed_signup-->
 						<a href="#numbers" class="page-scroll"><img
-							src="img/logos/cursor.png"
+							src="/img/logos/cursor.png"
 							class="img-responsive img-centered animated" alt=""
 							style="margin-top: 40px;"></a>
 		</div>
@@ -190,7 +190,7 @@
 				</div>
 			</div>
 			<br> <br> <img
-				src="/img/services/Outstanding SLD.png"
+				src="img/services/Outstanding SLD.png"
 				style="height: 170px; width: 1100px; margin: 0 auto;">
 			<div class="row" style="max-width: 100%; height: auto !important;">
 				<div class="col-lg-12 text-center">
@@ -200,8 +200,8 @@
 					<div class="ftb-widget" data-width="670" data-height="710" data-widget-id="fR0ZMXf8y3j"  data-href="https://www.graphiq.com/wlp/fR0ZMXf8y3j" ><a href="https://www.graphiq.com/wlp/fR0ZMXf8y3j" target="_blank"  style="font:14px/16px arial;color:#3d3d3d;">      | StartClass</a></div><script async src="https://s.graphiq.com/rx/widgets.js"></script>
 				</div>
 			</div>
-			<br> <br> <br> <img
-				src="/img/services/LineUp By the Numbers Stastic.png"
+			<br> <br> <br> 
+      <img src="img/services/LineUp By the Numbers Stastic.png"
 				style="height: 250px; width: 1100px; margin: 0 auto;">
 			<div class="row">
 				<div class="col-lg-12 text-center">
@@ -210,7 +210,7 @@
 				</div>
 			</div>
 			<br> <br> <br> <img
-				src="/img/services/Student Loan Debt Avg.png"
+				src="img/services/Student Loan Debt Avg.png"
 				style="height: 250px; width: 1100px; margin: 0 auto;">
 			<div class="row">
 				<div class="col-lg-12 text-center">
@@ -223,7 +223,7 @@
 				</div>
 			</div>
 			<br> <br> <br> <img
-				src="/img/services/Years to Pay Off Debt.png"
+				src="img/services/Years to Pay Off Debt.png"
 				style="height: 300px; width: 1100px; margin: 0 auto;">
 			<div class="row">
 				<div class="col-lg-12 text-center">
@@ -670,6 +670,20 @@
 			</div>
 		</div>
 	</section>
+
+  <!-- Sponsors section -->
+  <section id="sponsors">
+    <div class="container" style="height: 300px;">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading">INVESTORS</h2>
+          <br><br><br>
+          <img src="img/portfolio/idt.png" style="height: 300px; width: 300px;">
+        </div>
+      </div>
+    </div>
+  </section>
+<!-- Sponsors section -->
 
 	<!-- Contact Section -->
 	<section id="contact">
