fixes animation for fadein fadeout of logo

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
   <!-- PeduL Logo Fadein and FadeOut-->
 
   <div id="pedul_logo_container">
-    <div id="edu"><img class="edupng" src="img/logos/EDU.png"></div>
-    <div id="pandl"><img class="pandl" src="img/logos/PandL.png">
-      <h2 class="intro-heading">where opportunities blossom</h2>
+    <div class="hidden" id="edu"><img class="edupng" src="img/logos/EDU.png"></div>
+    <div class="hidden" id="pandl"><img class="pandl"  src="img/logos/PandL.png">
+      <h2 class="hidden" class="intro-heading">where opportunities blossom</h2>
     </div>
   </div> 
 
