--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 						class="icon-bar"></span>
 				</button>
 				<!-- <a class="navbar-brand page-scroll" href="#page-top">Sign up</a> -->
-				<a id="nav-logo" class="page-scroll log" href="#page-top"><img id="fade_pedul_logo" src="./img/logos/logowhite.png"></a>
+				<a id="nav-logo" class="hidden" class="page-scroll log" href="#page-top"><img id="fade_pedul_logo" src="./img/logos/logowhite.png"></a>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
